appId: host.exp.Exponent
---
- launchApp
- tapOn: "Sandbox"
- tapOn: "Box >"
- takeScreenshot: .maestro/screenshots/Box
- tapOn: "Box"
- tapOn: "Icons >"
- extendedWaitUntil:
    visible: "Icons"
    timeout: 5000
- takeScreenshot: .maestro/screenshots/Icons
- tapOn: "Icons"
- tapOn: "Typo >"
- takeScreenshot: .maestro/screenshots/Typo
- tapOn: "Typo"
