appId: host.exp.Exponent
---
# - launchApp
#- tapOn: 'Sandbox'
#- waitForAnimationToEnd:
#    timeout: 5000
- tapOn: 'Box >'
- waitForAnimationToEnd:
    timeout: 10000
- takeScreenshot: e2e/tempScreenshots/Box
- tapOn: 'Box'
- tapOn: 'Icons >'
- extendedWaitUntil:
    visible: 'Icons'
    timeout: 5000
- takeScreenshot: e2e/tempScreenshots/Icons
- tapOn: 'Icons'
- tapOn: 'Typo >'
- takeScreenshot: e2e/tempScreenshots/Typo
- tapOn: 'Typo'
